# alc_trajectory

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  cmake_building.md  use_code.md
cmake/: flags.cmake
examples/Nafion-hydrated/: SETTINGS
examples/bulk-water/: SETTINGS
scripts/: clean_data.sh
source/: alc_trajectory.F90  atomic_model.F90  constants.F90  fileset.F90  input_types.F90  numprec.F90  process_data.F90  settings.F90  trajectory.F90  unit_output.F90
tools/: gnu-build-debug.sh  gnu-build.sh  gnu-test-debug.sh  gnu-test.sh  ifort-build-debug.sh  ifort-build.sh  ifort-test-debug.sh  ifort-test.sh  ifx-build-debug.sh  ifx-build.sh  ifx-test-debug.sh  ifx-test.sh  intel-build-debug.sh  intel-build.sh  intel-test-debug.sh  intel-test.sh  launch-test.sh
tools/CI/: gcc-build-debug.sh  gcc-build.sh  gcc-test-debug.sh  gcc-test.sh  intel-build-debug.sh  intel-build.sh  intel-test-debug.sh  intel-test.sh
